[FIX] account_accountant: UI fixes and dark mode
[FIX] white space on the right of the bank rec widget on large screens
[FIX] Amount field in manual operations misplaced
[FIX] The selected line on top list should have a shadow not an outline
[FIX] Fix dark mode colors
[FIX] The gap between the border of kanban cards and right div (thanks to @dylankiss)

X-original-commit: 2c6444057dc56d692a2e5c8c0cb529a6e4c3e6a7
[FIX] *: adapt tours to sale order view conversion to OWL

X-original-commit: f23215c1cbae6f177d8c7863d493c1ffcf82e9da
Part-of: odoo/odoo#101352
[FIX] *: adapt tours to sale order view conversion to OWL

closes odoo/enterprise#32863

X-original-commit: f23215c1cbae6f177d8c7863d493c1ffcf82e9da
Part-of: odoo/odoo#101352

--- a/account_accountant/static/src/components/bank_reconciliation/bank_rec_widget_form.scss
+++ b/account_accountant/static/src/components/bank_reconciliation/bank_rec_widget_form.scss
@@ -79,8 +79,7 @@
 }
 
 .o_bank_rec_selected_line{
-    outline: thin solid mix(map-get($theme-colors, 'primary'), map-get($grays, '400'));
-    outline-offset: -1px;
+    background-color: whitesmoke;
 }
 
 .o_bank_rec_widget_form_suggest_button{
