--- a/account_accountant/static/src/components/bank_reconciliation/bank_rec_widget_kanban.scss
+++ b/account_accountant/static/src/components/bank_reconciliation/bank_rec_widget_kanban.scss
@@ -1,7 +1,7 @@
 .o_bank_rec_main_div {
     display: flex;
     flex-flow: row wrap;
-    background-color: white;
+    background-color: $o-view-background-color;;
     width: 100%;
     height: 100%;
     overflow: hidden;
@@ -16,10 +16,10 @@
 
         .o_bank_rec_st_line{
             margin: 0px !important;
-            border-right: thick solid transparent;
+            border-bottom: 1px solid $border-color;
 
-            &.o_bank_rec_selected_st_line{
-                border-right: thick solid mix(map-get($theme-colors, 'primary'), map-get($grays, '400'));
+            &.o_bank_rec_selected_st_line .o_bank_rec_st_line_kanban_card{
+                border-right: thick solid map-get($theme-colors, 'primary');
             }
 
             .statement_separator {
@@ -61,8 +61,9 @@
                 padding-left: 20px !important;
                 padding-right: 20px !important;
                 border-left: 0px !important;
-                border-right: 0px !important;
+                border-right: thick solid transparent;
                 border-top: 0px !important;
+                border-bottom: 0px !important;
 
                 .flex_column{
                     display: flex;
@@ -111,8 +112,6 @@
                     }
                 }
             }
-
-
         }
     }
 
@@ -125,9 +124,6 @@
         overflow: auto;
         overflow-x: hidden;
 
-        .o_form_view.o_xxl_form_view {
-            flex-direction: column !important;
-        }
     }
 
 }
